<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <include layout="@layout/activity_settings" />

    <RelativeLayout
        android:id="@+id/displayView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/main_title"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/title_background_img" >

            <ImageView
                android:id="@+id/main_title_logo"
                style="@style/main_title_text_img"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="25sp"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/settings_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/main_menu_btn_selector" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/main_title"
            android:background="#ff3782c3"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="4.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/main_btn_background" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="3dp">

                        <com.thingmagic.rfidreader.customViews.CustomEditText
                            android:id="@+id/search_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.55"
                            android:background="@drawable/rounded_edittext"
                            android:drawableLeft="@drawable/reader_search"
                            android:drawableRight="@drawable/field_clear"
                            android:inputType="text"
                            android:text=""
                            android:textSize="15sp" />

                        <com.thingmagic.rfidreader.customViews.CustomEditText
                            android:id="@+id/custom_reader_field"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.55"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="text"
                            android:text=""
                            android:textSize="15sp"
                            android:visibility="gone" />


                        <Spinner
                            android:id="@+id/SerialList"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.55"
                            android:ellipsize="marquee"
                            android:padding="0sp"
                            android:prompt="@string/SerialList"
                            android:singleLine="false"
                            android:spinnerMode="dropdown"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/Connect_button"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.30"
                            android:text="@string/Connect" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/ValidationField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FF0000"
                        android:visibility="gone" />

                    <RadioGroup
                        android:id="@+id/Reader_radio_group"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/NetworkReader_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:checked="true"
                            android:text="@string/NetworkReader" />

                        <RadioButton
                            android:id="@+id/SerialReader_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:checked="false"
                            android:text="@string/SerialReader" />

                        <RadioButton
                            android:id="@+id/CustomReader_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:checked="false"
                            android:text="@string/CustomReader" />
                    </RadioGroup>

                    <TabHost
                        android:id="@android:id/tabhost"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
			            android:layout_alignParentTop="true"
			            android:layout_centerHorizontal="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TabWidget
                                android:id="@android:id/tabs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </TabWidget>

                            <FrameLayout
                                android:id="@android:id/tabcontent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:id="@+id/tab1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">
                                    <include layout="@layout/read_layout" />



                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/tab2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">
                                    <include layout="@layout/write_layout" />

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/tab3"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">
                                    <include layout="@layout/search_layout" />

                                </LinearLayout>

                            </FrameLayout>
                        </LinearLayout>
                    </TabHost>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>